# Miniscience

./: .gitignore
lab1_Meshes/: CMakeLists.txt  Eevee.cpp  README.md  TorEmpty.stl  circle.cpp  cube.cpp  tor.cpp
lab2_VTK/: cubic3d-step-0.vts  eevee-0.vtu  eevee-1.vtu  eevee-10.vtu  eevee-11.vtu  eevee-12.vtu  eevee-13.vtu  eevee-14.vtu  eevee-15.vtu  eevee-16.vtu  eevee-17.vtu  eevee-18.vtu  eevee-19.vtu  eevee-2.vtu  eevee-20.vtu  eevee-21.vtu  eevee-22.vtu  eevee-23.vtu  eevee-24.vtu  eevee-25.vtu  eevee-26.vtu  eevee-27.vtu  eevee-28.vtu  eevee-29.vtu  eevee-3.vtu  eevee-4.vtu  eevee-5.vtu  eevee-6.vtu  eevee-7.vtu  eevee-8.vtu  eevee-9.vtu  evee.py  tetr3d.py
lab3_OpenFOAM/samples/pitzDaily/150/: U  epsilon  k  nut  p  phi
lab3_OpenFOAM/samples/pitzDaily/250/: U  epsilon  k  nut  p  phi
lab3_OpenFOAM/samples/pitzDaily/50/: U  epsilon  k  nut  p  phi
lab3_OpenFOAM/samples/pitzDaily/system/: controlDict
lab3_OpenFOAM/samples/rotorDisk/: log.blockMesh  log.simpleFoam  log.snappyHexMesh  log.surfaceFeatureExtract
lab3_OpenFOAM/samples/rotorDisk/100/: U  disk:rotorForce  k  nut  omega  p  phi
lab3_OpenFOAM/samples/rotorDisk/150/: U  disk:rotorForce  k  nut  omega  p  phi
lab3_OpenFOAM/samples/rotorDisk/200/: U  k  nut  p  (+3 more)
lab3_OpenFOAM/samples/smallPoolFire2D/: log.blockMesh  log.createPatch  log.topoSet
miniproject/0/: U  k  nut  omega  p
miniproject/constant/: transportProperties  turbulenceProperties
miniproject/constant/polyMesh/: boundary  faces  neighbour  owner  points
miniproject/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
(+1449 files in other folders)
